--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/animate.min.css">
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -57,7 +58,7 @@
             </div>
         </div>
     </section>
-    <section class="advantages">
+    <div class="advantages">
         <div class="container">
             <div class="advantages__main">НАШИ ПРЕИМУЩЕСТВА</div>
             <div class="advantages__wrapper">
@@ -70,7 +71,7 @@
                         </div>
                     </div>
                     <div class="advantages__icon">
-                        <img src="Icons/heart.svg" alt="heart">
+                        <img src="Icons/heart.svg" alt="heart" class="advantages__icon advantages__icon_animated">
                         <div class="advantages__header">Заботимся о здоровье</div>
                         <div class="advantages__subheader">Мы работаем для того, 
                             чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
@@ -88,30 +89,30 @@
                 </div>
             </div>
         </div>
-    </section>
+    </div>
     <section class="consult">
         <div class="container">
             <h2 class="consult__header">Получите бесплатную консультацию<br>
                 по подбору пульсометра </h2>
             <div class="consult__descr">Просто заполните форму заявки <br>
                 и мы перезвоним вам в течении 10 минут</div>
-            <form class="feed-form" action="#">
+            <form id="consultation-form" class="feed-form" action="#">
                 <input name="name" required placeholder="Ваше имя"  type="text">
-                <input name="phone" required placeholder="Ваш телефон"  type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш e-mail"  type="email">
                 <button class="button button_consult">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
     </section>
-    <section class="carousel">
+    <div class="carousel">
         <div class="container">
             <div class="carousel__inner">
-                <div><img src="Img/Слайд №1.png" alt="watch1"></div>
+                <div><img src="Img/Слайд№1.png" alt="watch1"></div>
                 <div><img src="Img/polar-m400-triple.png" alt="watch2"></div>
                 <div><img src="Img/polar-m600-trio-1470174547-vnNI-column-width-inline.png" alt="watch3"></div>
             </div> 
         </div>      
-    </section>
+    </div>
     <section class="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
@@ -136,6 +137,7 @@
                             <li>Вы сможете посмотреть данные по 10 тренировкам.</li>
                             <a href="" class="catalog-item__back">назад</a>
                         </ul>
+                        
                     </div>
                     <hr>
                     <div class="catalog-item__footer">
@@ -356,7 +358,7 @@
     <section class="feed">
         <div class="container">
             <h2 class="title">отзывы клиентов</h2>
-            <div class="feed__item">
+            <div class="feed__item animate__animated animate__fadeInUp wow">
                 <img src="img/photo_3.png" alt="Ирина Иванченко" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Ирина Иванченко</div>
@@ -370,7 +372,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
+            <div class="feed__item animate__animated animate__fadeInUp wow">
                 <img src="img/photo_2.png" alt="Иван Сёмочкин" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Иван Сёмочкин</div>
@@ -382,7 +384,7 @@
                     </div>
                 </div>
             </div>
-            <div class="feed__item">
+            <div class="feed__item animate__animated animate__fadeInUp wow">
                 <img src="img/photo_1.png" alt="Юлия Дашкина" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Юлия Дашкина</div>
@@ -417,9 +419,9 @@
             <div class="modal__subtitle">Просто заполните форму заявки</div>
             <div class="modal__descr">и мы перезвоним вам в течении 10 минут</div>
             <form class="feed-form feed-form_mt25" action="#">
-                <input name="name" required placeholder="Ваше имя"  type="text">
-                <input name="phone" required placeholder="Ваш телефон"  type="number">
-                <input name="email" required placeholder="Ваш e-mail"  type="email">
+                <input name="name" placeholder="Ваше имя"  type="text">
+                <input name="phone" placeholder="Ваш телефон">
+                <input name="email" placeholder="Ваш e-mail"  type="email">
                 <button class="button button_consult">заказать кОНСУЛЬТАЦИЮ</button>
             </form>
         </div>
@@ -429,7 +431,7 @@
             <div class="modal__descr">Пульсометр Polar FT1</div>
             <form class="feed-form feed-form_mt25" action="#">
                 <input name="name" required placeholder="Ваше имя"  type="text">
-                <input name="phone" required placeholder="Ваш телефон"  type="number">
+                <input name="phone" required placeholder="Ваш телефон">
                 <input name="email" required placeholder="Ваш e-mail"  type="email">
                 <button class="button button_consult">купить</button>
             </form>
@@ -440,10 +442,17 @@
             <div class="modal__descr">Наш менеджер свяжется с вами в ближайшее время!</div>
         </div>
     </div>
+    <a href="#up" class="pageup">
+        <img src="Icons/circle-chevron-up-solid.svg" alt="up">
+    </a>
+    
 
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/script.js"></script>
     <script src="js/slick.min.js""></script>
+    <script src="js/jquery.validate.min.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
 </body>
 </html>
